--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
     "next": "latest",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "swr": "0.1.18"
+    "swr": "1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
